add lectures list

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,5 +11,7 @@
     <color name="Midnight_Express">#132348</color>
     <color name="Transparent">#00000000</color>
     <color name="Transparent80">#80000000</color>
+    <color name="Chathams_Blue">#133F6A</color>
+    <color name="Lochmara">#0881C4</color>
 
 </resources>
