--- a/app/src/main/res/layout/ls_lectures.xml
+++ b/app/src/main/res/layout/ls_lectures.xml
@@ -20,7 +20,7 @@
         android:textStyle="bold" />
 
     <ListView
-        android:id="@id/ls_lecture"
+        android:id="@+id/ls_lecture"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"></ListView>
 
