--- a/app/src/main/res/layout/ls_notices.xml
+++ b/app/src/main/res/layout/ls_notices.xml
@@ -8,19 +8,19 @@
     android:orientation="vertical">
 
     <TextView
-        android:id="@+id/title_ls_lecture"
+        android:id="@+id/title_ls_notices"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_marginBottom="@dimen/edit_margin_bottom"
         android:layout_marginTop="@dimen/edit_margin_top"
-        android:text="@string/txt_ls_lecture"
+        android:text="@string/txt_ls_notices"
         android:textColor="@color/Black"
         android:textSize="@dimen/text_size_title"
         android:textStyle="bold" />
 
     <ListView
-        android:id="@+id/ls_lecture"
+        android:id="@+id/ls_notices"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"></ListView>
 
