--- a/app/src/main/res/layout/student_homepage.xml
+++ b/app/src/main/res/layout/student_homepage.xml
@@ -2,10 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginBottom="@dimen/edit_margin_bottom"
     android:layout_marginLeft="@dimen/edit_margin_left"
     android:layout_marginRight="@dimen/edit_margin_right"
-    android:layout_marginTop="@dimen/edit_margin_top"
     android:gravity="center"
     android:orientation="vertical">
 
@@ -38,7 +36,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/edit_margin_top"
         android:background="@drawable/button"
-        android:text="@string/btn_std_info"
+        android:text="@string/txt_std_info"
         android:textAllCaps="false"
         android:textColor="@color/White"
         android:textSize="@dimen/text_size_large"
@@ -69,24 +67,36 @@
         android:textStyle="bold" />
 
     <Button
-        android:id="@+id/btn_feedback"
+        android:id="@+id/btn_ls_lecture"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/edit_margin_top"
-        android:background="@drawable/button"
-        android:text="@string/btn_feedback"
+        android:background="@color/Cardinal"
+        android:text="@string/btn_ls_lecture"
         android:textAllCaps="false"
         android:textColor="@color/White"
         android:textSize="@dimen/text_size_large"
         android:textStyle="bold" />
 
     <Button
-        android:id="@+id/ls_lecture"
+        android:id="@+id/btn_ls_notices"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/edit_margin_top"
         android:background="@color/Cardinal"
-        android:text="@string/ls_lecture"
+        android:text="@string/btn_ls_notices"
+        android:textAllCaps="false"
+        android:textColor="@color/White"
+        android:textSize="@dimen/text_size_large"
+        android:textStyle="bold" />
+
+    <Button
+        android:id="@+id/btn_feedback"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/edit_margin_top"
+        android:background="@drawable/button"
+        android:text="@string/btn_feedback"
         android:textAllCaps="false"
         android:textColor="@color/White"
         android:textSize="@dimen/text_size_large"
