--- a/app/src/main/res/layout/lecturer_doc_sharing.xml
+++ b/app/src/main/res/layout/lecturer_doc_sharing.xml
@@ -11,6 +11,7 @@
         android:id="@+id/title_lecture_doc_sharing"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
         android:layout_marginTop="@dimen/edit_margin_top"
         android:text="@string/btn_doc_sharing"
         android:textColor="@color/Black"
