--- a/app/src/main/res/layout/lecturer_doc_sharing.xml
+++ b/app/src/main/res/layout/lecturer_doc_sharing.xml
@@ -8,10 +8,11 @@
     android:orientation="vertical">
 
     <TextView
-        android:id="@+id/title_lecture_doc_sharing"
+        android:id="@+id/lecture_doc_sharing_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
         android:layout_marginTop="@dimen/edit_margin_top"
         android:text="@string/btn_doc_sharing"
         android:textColor="@color/Black"
@@ -19,76 +20,92 @@
         android:textStyle="bold" />
 
     <TableLayout
-        android:id="@+id/syllabus_share"
+        android:id="@+id/syllabuses"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/edit_margin_bottom"
-        android:layout_marginTop="@dimen/edit_margin_top"
-        android:background="@color/Cardinal">
+        android:layout_height="wrap_content">
 
         <TableRow
-            android:id="@+id/upload_syllabus"
-            android:layout_margin="5dp"
-            android:layout_marginBottom="@dimen/edit_margin_bottom"
-            android:layout_marginTop="@dimen/edit_margin_top"
-            android:background="@color/White">
+            android:id="@+id/syllabus_upload"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-            <TextView
-                android:id="@+id/textView"
-                android:text="@string/upload_syllabus"
-                android:textColor="@color/Black"
-                android:textSize="@dimen/text_size_large" />
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
 
-            <Button
-                android:id="@+id/btn_syllabus_upload"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:layout_gravity="right"
-                android:layout_marginRight="93dp"
-                android:background="@drawable/img_icon_upload" />
+                <TextView
+                    android:id="@+id/txt_syllabus_upload"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/upload_syllabus"
+                    android:textColor="@color/Black"
+                    android:textSize="@dimen/text_size_large" />
+
+                <Button
+                    android:id="@+id/btn_syllabus_upload"
+                    android:layout_width="@dimen/text_size_large"
+                    android:layout_height="@dimen/text_size_large"
+                    android:layout_alignParentRight="true"
+                    android:background="@drawable/img_icon_upload"
+                    android:layout_marginRight="@dimen/edit_margin_right"/>
+            </RelativeLayout>
+
         </TableRow>
 
         <TableRow
-            android:id="@+id/edt_syllabus"
-            android:background="@color/White">
+            android:id="@+id/syllabuses_edt"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-            <ListView android:id="@+id/ls_syllabus"></ListView>
+            <ListView
+                android:id="@+id/ls_syllabuses"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"></ListView>
         </TableRow>
     </TableLayout>
-
 
     <TableLayout
-        android:id="@+id/lecture_note_share"
+        android:id="@+id/lecture_note"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/edit_margin_bottom"
-        android:layout_marginTop="@dimen/edit_margin_top"
-        android:background="@color/Cardinal">
+        android:layout_height="wrap_content">
 
         <TableRow
-            android:id="@+id/upload_lecture_note"
-            android:layout_margin="5dp"
-            android:background="@color/White">
+            android:id="@+id/lecture_note_upload"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-            <TextView
-                android:text="@string/upload_lecture_note"
-                android:textColor="@color/Black"
-                android:textSize="@dimen/text_size_large" />
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
 
-            <Button
-                android:id="@+id/btn_lecture_note_upload"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:layout_gravity=""
-                android:background="@drawable/img_icon_upload" />
+                <TextView
+                    android:id="@+id/txt_lecture_note_upload"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/upload_syllabus"
+                    android:textColor="@color/Black"
+                    android:textSize="@dimen/text_size_large" />
+
+                <Button
+                    android:id="@+id/btn_lecture_note_upload"
+                    android:layout_width="@dimen/text_size_large"
+                    android:layout_height="@dimen/text_size_large"
+                    android:layout_alignParentRight="true"
+                    android:background="@drawable/img_icon_upload"
+                    android:layout_marginRight="@dimen/edit_margin_right"/>
+            </RelativeLayout>
+
         </TableRow>
 
         <TableRow
-            android:id="@+id/edt_lecture_note"
-            android:background="@color/White">
+            android:id="@+id/lecture_notes_edt"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-            <ListView android:id="@+id/ls_lecture_note"></ListView>
+            <ListView
+                android:id="@+id/ls_lecture_note"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"></ListView>
         </TableRow>
     </TableLayout>
-
 </LinearLayout>
