--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -56,8 +56,8 @@
 
     <Button
         android:id="@+id/btn_forgot"
-        android:layout_width="wrap_content"
-        android:layout_height="@dimen/box_size"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="@dimen/edit_margin_bottom"
