--- a/app/src/main/res/layout/ls_std_doc.xml
+++ b/app/src/main/res/layout/ls_std_doc.xml
@@ -40,7 +40,7 @@
         android:id="@+id/txt_lecture_notes"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/upload_syllabus"
+        android:text="@string/upload_lecture_note"
         android:textColor="@color/Black"
         android:textSize="@dimen/text_size_large" />
 
