--- a/app/src/main/res/layout/document_view.xml
+++ b/app/src/main/res/layout/document_view.xml
@@ -2,13 +2,14 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginLeft="@dimen/edit_margin_left"
-    android:layout_marginRight="@dimen/edit_margin_right"
-    android:layout_marginTop="@dimen/edit_margin_top"
-    android:orientation="vertical">
+    android:background="@color/White">
 
     <com.github.barteksc.pdfviewer.PDFView
         android:id="@+id/document_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:layout_marginLeft="@dimen/edit_margin_left"
+        android:layout_marginRight="@dimen/edit_margin_right"
+        android:layout_marginTop="@dimen/edit_margin_top"
+        android:orientation="vertical"/>
 </LinearLayout>
