--- a/app/src/main/res/layout/lecturer_doc_sharing.xml
+++ b/app/src/main/res/layout/lecturer_doc_sharing.xml
@@ -2,12 +2,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginBottom="@dimen/edit_margin_bottom"
-    android:layout_marginLeft="@dimen/edit_margin_left"
-    android:layout_marginRight="@dimen/edit_margin_right"
-    android:layout_marginTop="@dimen/edit_margin_top"
     android:gravity="center_horizontal"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@color/White">
 
     <TextView
         android:id="@+id/lecture_doc_sharing_title"
@@ -15,6 +12,9 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
+        android:layout_marginBottom="@dimen/edit_margin_bottom"
+        android:layout_marginLeft="@dimen/edit_margin_left"
+        android:layout_marginRight="@dimen/edit_margin_right"
         android:layout_marginTop="@dimen/edit_margin_top"
         android:text="@string/btn_doc_sharing"
         android:textColor="@color/Black"
@@ -24,7 +24,11 @@
     <TableLayout
         android:id="@+id/syllabuses"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/edit_margin_left"
+        android:layout_marginRight="@dimen/edit_margin_right"
+        android:layout_marginTop="@dimen/edit_margin_top"
+>
 
         <TableRow
             android:id="@+id/syllabus_upload"
@@ -68,22 +72,26 @@
     </TableLayout>
 
     <TableLayout
-        android:id="@+id/lecture_note"
+        android:id="@+id/lecture_notes"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/edit_margin_bottom"
+        android:layout_marginLeft="@dimen/edit_margin_left"
+        android:layout_marginRight="@dimen/edit_margin_right"
         android:layout_marginTop="@dimen/edit_margin_top">
 
         <TableRow
-            android:id="@+id/lecture_note_upload"
+            android:id="@+id/lecture_not_upload"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/edit_margin_top">
 
             <RelativeLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
 
                 <TextView
-                    android:id="@+id/txt_lecture_note_upload"
+                    android:id="@+id/txt_lecture_notes_upload"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/upload_lecture_note"
@@ -107,7 +115,7 @@
             android:layout_height="wrap_content">
 
             <ListView
-                android:id="@+id/ls_lecture_note"
+                android:id="@+id/ls_lecture_notes"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"></ListView>
         </TableRow>
