--- a/app/src/main/res/layout/ls_lectures.xml
+++ b/app/src/main/res/layout/ls_lectures.xml
@@ -5,7 +5,8 @@
     android:layout_gravity="center_horizontal"
     android:layout_marginLeft="@dimen/edit_margin_left"
     android:layout_marginRight="@dimen/edit_margin_right"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@color/White">
 
     <TextView
         android:id="@+id/title_ls_lecture"
